[project]
name = "synthesis_slice"
version = "0.1.0"
description = "An agent storefront that models dynamic pricing, checkout policy, and identity-aware access for ENS and Locus-powered commerce."
readme = "README.md"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
